--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ getrandom = { version = "0.2.10", features = ["js"] }
 rand = "0.8.5"
 wasm-logger = "0.2.0"
 log = "0.4.19"
+regex = "1.9.3"
 
 [workspace]
 members = ["src-tauri"]
