--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ rand = "0.8.5"
 wasm-logger = "0.2.0"
 log = "0.4.19"
 regex = "1.9.3"
+timer = "0.2.0"
+rayon = "1.7.0"
+time = "0.3.25"
+chrono = "0.4.26"
 
 [workspace]
 members = ["src-tauri"]
